# auto_adpq

./: .gitignore  Makefile  README.md  algo.ipynb  pyproject.toml  tmp.py  understanding_lasso.ipynb
.github/workflows/: ci.yml  release.yml
docs/: BUILD.md  conf.py  index.rst  requirements.txt
docs/_static/: README.md  custom.css
docs/_templates/: versions.html
examples/: .simple_quantization.py.swp  compare_error_weights.ipynb  compute_effective_bits.ipynb  load_AdpQ_weights.py  model_card.py  quantization_for_profiling.py  quantize_a_model.ipynb  simple_quantization.py  tmp.py
examples/weights/adpq/: model_layers_0_self_attn_k_proj_weight.pt  model_layers_0_self_attn_o_proj_weight.pt  model_layers_0_self_attn_q_proj_weight.pt  model_layers_0_self_attn_v_proj_weight.pt
examples/weights/ref/: model_layers_0_self_attn_k_proj_weight.pt  model_layers_0_self_attn_o_proj_weight.pt  model_layers_0_self_attn_q_proj_weight.pt  model_layers_0_self_attn_v_proj_weight.pt
src/auto_adpq/: __init__.py  class_format.py  module.py
tests/: conftest.py  test_1.py  test_auto_adpq.py  test_full_quantization.py  test_lasso_function.py  test_model_adpq.py  test_packing.py  tmp.ipynb  tmp.py
tests/out_test/: _weights_adpq_quantized.npz  weights_adpq_quantized.npz
tests/weights/random_array/: lm_head_ref.npy  model_layers_0_mlp_down_proj_ref.npy  model_layers_0_mlp_gate_proj_ref.npy  model_layers_0_mlp_up_proj_ref.npy  model_layers_0_self_attn_k_proj_ref.npy  model_layers_0_self_attn_o_proj_ref.npy  model_layers_0_self_attn_q_proj_ref.npy  model_layers_0_self_attn_q_proj_ref.pkl  model_layers_0_self_attn_v_proj_ref.npy  model_layers_1_mlp_down_proj_ref.npy  model_layers_1_mlp_gate_proj_ref.npy  model_layers_1_mlp_up_proj_ref.npy  model_layers_1_self_attn_k_proj_ref.npy  model_layers_1_self_attn_o_proj_ref.npy  model_layers_1_self_attn_q_proj_ref.npy  model_layers_1_self_attn_v_proj_ref.npy
tests/weights/random_array/pickle/: model_layers_0_mlp_up_proj_ref.pkl  (+27 more)
(+14 files in other folders)
